[package]
name = "wgsl_workbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
cpal = "0.15.2"
egui-winit = "0.22.0"
env_logger = "0.10.0"
hotwatch = "0.5.0"
naga = "0.13.0"
nokhwa = "0.10.4"
parking_lot = "0.12.1"
pollster = "0.3.0"
wasm-pack = "0.12.1"
wgpu = "0.17.0"
winit = "0.28.6"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["nokhwa/input-native"]
